@@ -2,4 +2,5 @@
 ../Makefile. ;
 ../Makefile.* ;
 ../makefiles-local/Makefile.* ;
+../*/Makefile. ;
 -R *.bak
