@@ -641,6 +641,10 @@ wit v1.00a r1214 - 2010-06-12
    tmd.bin (new!), header.bin (new!), boot.bin, fst.bin and of DOL-files.
    The file type is detected automatically by analyzing the content.
 
+wit v1.00b r1218 - 2010-06-12  (repository only)
+
+ - The tools iso2wbfs, iso2wdf and wdf2iso have been removed. Use wit instead.
+
 @@MODULE(last-history.txt)@@
 
 
